update doc and category
